Fix filter panel's component spacing

--- a/frontend/src/app/components/form-fields/location-field/location-field.component.css
+++ b/frontend/src/app/components/form-fields/location-field/location-field.component.css
@@ -1,6 +1,6 @@
 .input-container {
     position: relative;
-    margin: 1em 0;
+    margin: 0 0;
 }
 
 input[type="text"] {
